style.css
* {
  scroll-behavior: smooth;
  font-family: Raleway, sans-serif;
}

body {
  height: 6000px;
}

.carousel {
  width: 100%;
  height: 900px;
  position: relative;
  top: 55px;
}

.carousel .other-content {
  position: absolute;
  top: 350px;
  left: 0;
  width: 100%;
  text-align: center;
  z-index: 2;
  padding: 30px;
  font-size: 50px;
  color: white;
}

.carousel .slide {
  z-index: 1;
  position: absolute;
  width: 100%;
  top: 0;
  left: 0;
  height: 100%;
  transition: opacity 1s ease-in-out;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 0;
}

.carousel .slide.show {
  opacity: 1;
}

